apex/grammar.js
    source_file: ($) => repeat($.declaration),

    // =========================================================================
    // DECLARATIONS
    // =========================================================================

    /**
     * A declaration is any top-level or nested construct that defines
     * a named entity: class, interface, enum, or trigger.
     */
    class_declaration: ($) => seq(
      optional($.modifiers),
      ci("class"),
      field("name", $.identifier),
      optional($.superclass),
      optional($.interfaces),
      field("body", $.class_body)
    ),

    /**
     * Superclass clause — extends keyword.
     * Example: extends TriggerHandler
     */
    superclass: ($) => seq(ci("extends"), $.type_identifier),

    /**
     * Implements clause — one or more interface names.
     * Example: implements Queueable, Database.Batchable
     */
    class_body: ($) => seq(
      "{",
      repeat($._class_body_declaration),
      "}"
    ),

    /**
     * Items that can appear inside a class body.
     */
    _class_body_declaration: ($) => choice(
      $.field_declaration,
      $.method_declaration,
      $.constructor_declaration,
      $.property_declaration,
      $.class_declaration,      // Inner classes
      $.interface_declaration,  // Inner interfaces
      $.enum_declaration,       // Inner enums
      ";",  // Empty statement (allowed in class body)
    ),

    // --- Method, Constructor, Property ---
    method_declaration: ($) => seq(
      optional($.modifiers),
      field("type", $._type),
      field("name", $.identifier),
      field("parameters", $.formal_parameters),
      choice(field("body", $.block), ";")  // abstract methods have no body
    ),

    constructor_declaration: ($) => seq(
      optional($.modifiers),
      field("name", $.identifier),
      field("parameters", $.formal_parameters),
      field("body", $.block)
    ),

    formal_parameters: ($) => seq("(", optional(commaJoined1($.formal_parameter)), ")"),
    formal_parameter: ($) => seq(
      optional($.modifiers),
      field("type", $._type),
      field("name", $.identifier)
    ),

    // --- Interface Declaration ---

    /**
     * Interface declaration.
     *
     * Example:
     *   public interface Notifiable {
     *     void notify(String message);
     *   }
     */
    modifiers: ($) => repeat1(choice($.annotation, $.modifier)),

    modifier: ($) => choice(
      // Access modifiers
      ci("public"),
      ci("private"),
      ci("protected"),
      ci("global"),        // Apex-specific: visible across namespaces
      // Sharing modifiers (Apex-specific: control record-level security)
      ci("with sharing"),
      ci("without sharing"),
      ci("inherited sharing"),
      // Other modifiers
      ci("static"),
      ci("final"),
      ci("override"),
      ci("virtual"),       // Apex-specific: class/method can be extended/overridden
      ci("abstract"),
      ci("transient"),     // Apex-specific: field not serialized in Visualforce
      ci("testMethod"),    // Deprecated: use @IsTest annotation instead
    ),

    // =========================================================================
    // TYPE SYSTEM
    // =========================================================================

    /**
     * Type reference — used in variable declarations, method signatures, etc.
     * This is a hidden rule; one of its alternatives appears in the tree.
     */
    _type: ($) => choice(
      $.type_identifier,
      $.generic_type,
      $.array_type,
      $.void_type,
    ),

    /**
     * Type identifier — a simple or dotted type name.
     *
     * Examples:
     *   String              (primitive type)
     *   Account             (sObject type)
     *   Database.Batchable  (namespaced type)
     *   My_Custom__c        (custom sObject)
     */
    type_identifier: ($) => choice(
      $.identifier,
      $.scoped_type_identifier,
    ),

    /**
     * Scoped type — a dot-separated type path.
     *
     * Examples:
     *   Database.Batchable
     *   System.Label
     *   Schema.SObjectField
     */
    void_type: ($) => ci("void"),

    // =========================================================================
    // FIELD DECLARATIONS
    // =========================================================================

    /**
     * Field declaration — a variable defined at the class level.
     *
     * Examples:
     *   private String name;
     *   public static Integer count = 0;
     *   private final Boolean IS_ACTIVE = true;
     *   List<Account> accounts = new List<Account>();
     */
    variable_declarator: ($) => seq(
      field("name", $.identifier),
      optional(seq("=", field("value", $._variable_initializer)))
    ),

    _variable_initializer: ($) => $.expression,

    // =========================================================================
    // EXPRESSIONS
    // =========================================================================

    /**
     * Expression supertype — encompasses all possible expressions.
     * This will be expanded significantly in Steps 5-6.
     */
    binary_expression: ($) => choice(
      ...[
        ["||", PREC.OR],
        ["&&", PREC.AND],
        ["|", PREC.BIT_OR],
        ["^", PREC.BIT_XOR],
        ["&", PREC.BIT_AND],
        ["==", PREC.EQUALITY],
        ["!=", PREC.EQUALITY],
        ["<>", PREC.EQUALITY],
        ["===", PREC.EQUALITY],
        ["!==", PREC.EQUALITY],
        ["<", PREC.REL],
        ["<=", PREC.REL],
        [">", PREC.REL],
        [">=", PREC.REL],
        ["<<", PREC.SHIFT],
        [">>", PREC.SHIFT],
        [">>>", PREC.SHIFT],
        ["+", PREC.ADD],
        ["-", PREC.ADD],
        ["*", PREC.MULT],
        ["/", PREC.MULT],
        ["%", PREC.MULT],
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field("left", $.expression),
          operator,
          field("right", $.expression)
        ))
      )
    ),

    update_expression: ($) => prec.left(PREC.UNARY, choice(
      seq(choice("++", "--"), $.expression),
      seq($.expression, choice("++", "--"))
    )),

    new_expression: ($) => prec.right(PREC.OBJ_INST, seq(
      ci("new"),
      field("type", $._type),
      choice(
        field("arguments", $.argument_list),
        $.array_initializer
      )
    )),

    argument_list: ($) => seq("(", optional(commaJoined1($.expression)), ")"),
    
    method_invocation: ($) => prec.left(PREC.OBJ_ACCESS, seq(
      optional(seq(field("object", $.expression), choice(".", "?."))),
      field("name", $.identifier),
      field("arguments", $.argument_list)
    )),

    field_access: ($) => prec.left(PREC.OBJ_ACCESS, seq(
      field("object", $.expression),
      choice(".", "?."),
      field("field", $.identifier)
    )),

    this: ($) => ci("this"),
    super: ($) => ci("super"),

    parenthesized_expression: ($) => seq("(", $.expression, ")"),

    // =========================================================================
    // LITERALS
    // =========================================================================

    string_literal: ($) => /'(\\[nNrRtTbBfFuU"'_%\\]|[^\\'])*'/,
    int: ($) => token(/[0-9]+(_[0-9]+)*/),
    boolean: ($) => choice(ci("true"), ci("false")),
    null_literal: ($) => ci("null"),

    // =========================================================================
    // STATEMENTS (Placeholder — expanded in Step 5)
    // =========================================================================

    /**
     * Statement supertype — placeholder for Step 5.
     * Currently only allows expression statements and blocks.
     */
    if_statement: ($) => prec.right(seq(
      ci("if"), "(", field("condition", $.expression), ")",
      field("consequence", $.statement),
      optional(seq(ci("else"), field("alternative", $.statement)))
    )),

    for_statement: ($) => seq(
      ci("for"), "(",
      field("init", choice($.local_variable_declaration, seq(optional(commaJoined1($.expression)), ";"))),
      field("condition", optional($.expression)), ";",
      field("update", optional(commaJoined1($.expression))),
      ")",
      field("body", $.statement)
    ),

    enhanced_for_statement: ($) => seq(
      ci("for"), "(",
      field("type", $._type),
      field("name", $.identifier),
      ":",
      field("value", $.expression),
      ")",
      field("body", $.statement)
    ),

    while_statement: ($) => seq(
      ci("while"), "(", field("condition", $.expression), ")",
      field("body", $.statement)
    ),

    do_while_statement: ($) => seq(
      ci("do"), field("body", $.statement),
      ci("while"), "(", field("condition", $.expression), ")", ";"
    ),

    switch_statement: ($) => seq(
      ci("switch on"), field("condition", $.expression), "{",
      repeat($.when_clause),
      optional($.when_else_clause),
      "}"
    ),
    
    /**
     * When clause — a single branch in a switch statement.
     *
     * Two forms are supported:
     *
     * 1. SOBJECT TYPE PATTERN (one or more):
     *    when Account a { }                  (single type)
     *    when Account a, Contact c { }       (multiple types — Salesforce extension)
     *
     * 2. LITERAL/ENUM PATTERN:
     *    when 'a', 'b', 'c' { }     (string literals)
     *    when 1, 2, 3 { }           (integer literals)
     *    when MyEnum.Value1 { }     (enum values)
     *
     * WHY prec(1) ON when_type_pattern?
     * Both forms start with an expression-like token. Without a precedence hint,
     * tree-sitter would try both alternatives and could produce an ambiguous parse.
     * Giving type patterns higher priority ensures `Account a` is always parsed as
     * a type+name pair, not as two expressions (`Account`, `a`).
     */
    when_clause: ($) => seq(
      ci("when"),
      choice(
        commaJoined1($.when_type_pattern),   // SObject type patterns (higher priority)
        commaJoined1($.expression),          // Literal and enum patterns
      ),
      field("body", $.block)
    ),

    /**
     * A single SObject type pattern inside a when clause.
     *
     * Syntax: TypeName variableName
     *
     * Examples:
     *   Account a
     *   Contact c
     *   Opportunity opp
     *
     * The variable name is bound within the when block body and can be used
     * directly without a cast.
     */
    when_type_pattern: ($) => prec(1, seq(
      field("type", $._type),
      field("name", $.identifier)
    )),

    when_else_clause: ($) => seq(
      ci("when else"), field("body", $.block)
    ),

    try_statement: ($) => seq(
      ci("try"), field("body", $.block),
      repeat($.catch_clause),
      optional($.finally_clause)
    ),

    catch_clause: ($) => seq(
      ci("catch"), "(", $.catch_formal_parameter, ")", field("body", $.block)
    ),

    catch_formal_parameter: ($) => seq(
      optional($.modifiers), field("type", $._type), field("name", $.identifier)
    ),

    finally_clause: ($) => seq(ci("finally"), field("body", $.block)),

    return_statement: ($) => seq(ci("return"), optional($.expression), ";"),
    throw_statement: ($) => seq(ci("throw"), $.expression, ";"),
    break_statement: ($) => seq(ci("break"), ";"),
    continue_statement: ($) => seq(ci("continue"), ";"),

    dml_statement: ($) => seq($.dml_type, $.expression, optional($.expression), ";"),
    dml_type: ($) => choice(
      ci("insert"), ci("update"), ci("upsert"),
      ci("delete"), ci("undelete"), ci("merge")
    ),

    expression_statement: ($) => seq(
      choice(
        $.assignment_expression,
        $.update_expression,
        $.method_invocation,
        $.new_expression
      ),
      ";"
    ),

    block: ($) => seq("{", repeat($.statement), "}"),

    /**
     * Local variable declaration — inside a method or block.
     *
     * Example:
     *   String name = 'hello';
     *   Integer count = 0;
     */
    local_variable_declaration: ($) => seq(
      optional($.modifiers),
      field("type", $._type),
      commaJoined1($.variable_declarator),
      ";"
    ),

    // =========================================================================
    // IDENTIFIERS
    // =========================================================================

    /**
     * Identifier — matches class names, field names, method names, etc.
     * Must start with a letter, can contain letters, digits, and underscores.
     */
    identifier: ($) => /[A-Za-z][A-Za-z\d_]*/,
