apex/test/corpus/statements.txt
==================
If else statement
==================

public class T {
    public void doWork() {
        if (true) {
        } else if (false) {
        } else {
        }
    }
}

---

(source_file
  (class_declaration
    (modifiers
      (modifier))
    name: (identifier)
    body: (class_body
      (method_declaration
        (modifiers
          (modifier))
        type: (void_type)
        name: (identifier)
        parameters: (formal_parameters)
        body: (block
          (if_statement
            condition: (boolean)
            consequence: (block)
            alternative: (if_statement
              condition: (boolean)
              consequence: (block)
              alternative: (block))))))))

==================
For statements
==================

public class T {
    public void doWork() {
        for (Integer i = 0; i < 10; i++) {
        }
        for (Account a : accounts) {
        }
    }
}

---

(source_file
  (class_declaration
    (modifiers
      (modifier))
    name: (identifier)
    body: (class_body
      (method_declaration
        (modifiers
          (modifier))
        type: (void_type)
        name: (identifier)
        parameters: (formal_parameters)
        body: (block
          (for_statement
            init: (local_variable_declaration
              type: (type_identifier
                (identifier))
              (variable_declarator
                name: (identifier)
                value: (int)))
            condition: (binary_expression
              left: (identifier)
              right: (int))
            update: (update_expression
              (identifier))
            body: (block))
          (enhanced_for_statement
            type: (type_identifier
              (identifier))
            name: (identifier)
            value: (identifier)
            body: (block)))))))

==================
While and Do-While statements
==================

public class T {
    public void doWork() {
        while (true) {
        }
        do {
        } while (false);
    }
}

---

(source_file
  (class_declaration
    (modifiers
      (modifier))
    name: (identifier)
    body: (class_body
      (method_declaration
        (modifiers
          (modifier))
        type: (void_type)
        name: (identifier)
        parameters: (formal_parameters)
        body: (block
          (while_statement
            condition: (boolean)
            body: (block))
          (do_while_statement
            body: (block)
            condition: (boolean)))))))

==================
Switch statements
==================

public class T {
    public void doWork() {
        switch on x {
            when 1, 2 { }
            when Account a { }
            when else { }
        }
    }
}

---

(source_file
  (class_declaration
    (modifiers
      (modifier))
    name: (identifier)
    body: (class_body
      (method_declaration
        (modifiers
          (modifier))
        type: (void_type)
        name: (identifier)
        parameters: (formal_parameters)
        body: (block
          (switch_statement
            condition: (identifier)
            (when_clause
              (int)
              (int)
              body: (block))
            (when_clause
              (when_type_pattern
                type: (type_identifier
                  (identifier))
                name: (identifier))
              body: (block))
            (when_else_clause
              body: (block))))))))

==================
Try Catch Finally statements
==================

public class T {
    public void doWork() {
        try {
            throw new Exception();
        } catch (Exception e) {
        } finally {
        }
    }
}

---

(source_file
  (class_declaration
    (modifiers
      (modifier))
    name: (identifier)
    body: (class_body
      (method_declaration
        (modifiers
          (modifier))
        type: (void_type)
        name: (identifier)
        parameters: (formal_parameters)
        body: (block
          (try_statement
            body: (block
              (throw_statement
                (new_expression
                  type: (type_identifier
                    (identifier))
                  arguments: (argument_list))))
            (catch_clause
              (catch_formal_parameter
                type: (type_identifier
                  (identifier))
                name: (identifier))
              body: (block))
            (finally_clause
              body: (block))))))))

==================
DML statements
==================

public class T {
    public void doWork() {
        insert a;
        update a;
        upsert a;
        delete a;
        undelete a;
        merge a b;
    }
}

---

(source_file
  (class_declaration
    (modifiers
      (modifier))
    name: (identifier)
    body: (class_body
      (method_declaration
        (modifiers
          (modifier))
        type: (void_type)
        name: (identifier)
        parameters: (formal_parameters)
        body: (block
          (dml_statement
            (dml_type)
            record: (identifier))
          (dml_statement
            (dml_type)
            record: (identifier))
          (dml_statement
            (dml_type)
            record: (identifier))
          (dml_statement
            (dml_type)
            record: (identifier))
          (dml_statement
            (dml_type)
            record: (identifier))
          (dml_statement
            (dml_type)
            record: (identifier)
            options: (identifier)))))))

==================
Return, Break, Continue
==================

public class T {
    public void doWork() {
        return;
        break;
        continue;
    }
}

---

(source_file
  (class_declaration
    (modifiers
      (modifier))
    name: (identifier)
    body: (class_body
      (method_declaration
        (modifiers
          (modifier))
        type: (void_type)
        name: (identifier)
        parameters: (formal_parameters)
        body: (block
          (return_statement)
          (break_statement)
          (continue_statement))))))

====================================
Switch with multiple SObject type patterns
====================================

public class T {
    public void doWork() {
        switch on obj {
            when Account a, Contact c {
                System.debug(a);
            }
            when Opportunity o {
                System.debug(o);
            }
            when else {
                System.debug('unknown');
            }
        }
    }
}

---

(source_file
  (class_declaration
    (modifiers
      (modifier))
    name: (identifier)
    body: (class_body
      (method_declaration
        (modifiers
          (modifier))
        type: (void_type)
        name: (identifier)
        parameters: (formal_parameters)
        body: (block
          (switch_statement
            condition: (identifier)
            (when_clause
              (when_type_pattern
                type: (type_identifier
                  (identifier))
                name: (identifier))
              (when_type_pattern
                type: (type_identifier
                  (identifier))
                name: (identifier))
              body: (block
                (expression_statement
                  (method_invocation
                    object: (identifier)
                    name: (identifier)
                    arguments: (argument_list
                      (identifier))))))
            (when_clause
              (when_type_pattern
                type: (type_identifier
                  (identifier))
                name: (identifier))
              body: (block
                (expression_statement
                  (method_invocation
                    object: (identifier)
                    name: (identifier)
                    arguments: (argument_list
                      (identifier))))))
            (when_else_clause
              body: (block
                (expression_statement
                  (method_invocation
                    object: (identifier)
                    name: (identifier)
                    arguments: (argument_list
                      (string_literal))))))))))))

====================================
Switch with single SObject type pattern
====================================

public class T {
    public void doWork() {
        switch on record {
            when Account a {
                System.debug(a.Name);
            }
        }
    }
}

---

(source_file
  (class_declaration
    (modifiers
      (modifier))
    name: (identifier)
    body: (class_body
      (method_declaration
        (modifiers
          (modifier))
        type: (void_type)
        name: (identifier)
        parameters: (formal_parameters)
        body: (block
          (switch_statement
            condition: (identifier)
            (when_clause
              (when_type_pattern
                type: (type_identifier
                  (identifier))
                name: (identifier))
              body: (block
                (expression_statement
                  (method_invocation
                    object: (identifier)
                    name: (identifier)
                    arguments: (argument_list
                      (field_access
                        object: (identifier)
                        field: (identifier)))))))))))))

====================================
Switch with literal and null patterns
====================================

public class T {
    public void doWork() {
        switch on day {
            when 'Monday', 'Tuesday' {
                System.debug('weekday');
            }
            when null {
                System.debug('null');
            }
            when else {
                System.debug('other');
            }
        }
    }
}

---

(source_file
  (class_declaration
    (modifiers
      (modifier))
    name: (identifier)
    body: (class_body
      (method_declaration
        (modifiers
          (modifier))
        type: (void_type)
        name: (identifier)
        parameters: (formal_parameters)
        body: (block
          (switch_statement
            condition: (identifier)
            (when_clause
              (string_literal)
              (string_literal)
              body: (block
                (expression_statement
                  (method_invocation
                    object: (identifier)
                    name: (identifier)
                    arguments: (argument_list
                      (string_literal))))))
            (when_clause
              (null_literal)
              body: (block
                (expression_statement
                  (method_invocation
                    object: (identifier)
                    name: (identifier)
                    arguments: (argument_list
                      (string_literal))))))
            (when_else_clause
              body: (block
                (expression_statement
                  (method_invocation
                    object: (identifier)
                    name: (identifier)
                    arguments: (argument_list
                      (string_literal))))))))))))

====================================
Explicit constructor invocation this
====================================

public class CustomClass {
    public CustomClass() {
        this('default', 0);
    }
    public CustomClass(String name) {
        this();
    }
}

---

(source_file
  (class_declaration
    (modifiers
      (modifier))
    name: (identifier)
    body: (class_body
      (constructor_declaration
        (modifiers
          (modifier))
        name: (identifier)
        parameters: (formal_parameters)
        body: (block
          (explicit_constructor_invocation
            (this)
            arguments: (argument_list
              (string_literal)
              (int)))))
      (constructor_declaration
        (modifiers
          (modifier))
        name: (identifier)
        parameters: (formal_parameters
          (formal_parameter
            type: (type_identifier
              (identifier))
            name: (identifier)))
        body: (block
          (explicit_constructor_invocation
            (this)
            arguments: (argument_list)))))))

====================================
Explicit constructor invocation super
====================================

public class CustomException extends Exception {
    public CustomException(String msg) {
        super(msg);
    }
    public CustomException(String msg, Exception cause) {
        super(msg, cause);
    }
}

---

(source_file
  (class_declaration
    (modifiers
      (modifier))
    name: (identifier)
    (superclass
      (type_identifier
        (identifier)))
    body: (class_body
      (constructor_declaration
        (modifiers
          (modifier))
        name: (identifier)
        parameters: (formal_parameters
          (formal_parameter
            type: (type_identifier
              (identifier))
            name: (identifier)))
        body: (block
          (explicit_constructor_invocation
            (super)
            arguments: (argument_list
              (identifier)))))
      (constructor_declaration
        (modifiers
          (modifier))
        name: (identifier)
        parameters: (formal_parameters
          (formal_parameter
            type: (type_identifier
              (identifier))
            name: (identifier))
          (formal_parameter
            type: (type_identifier
              (identifier))
            name: (identifier)))
        body: (block
          (explicit_constructor_invocation
            (super)
            arguments: (argument_list
              (identifier)
              (identifier))))))))

==================================================
Explicit constructor invocation qualified super
==================================================

public class InnerClass extends BaseClass {
    public InnerClass(OuterClass outer) {
        outer.super();
    }
}

---

(source_file
  (class_declaration
    (modifiers
      (modifier))
    name: (identifier)
    (superclass
      (type_identifier
        (identifier)))
    body: (class_body
      (constructor_declaration
        (modifiers
          (modifier))
        name: (identifier)
        parameters: (formal_parameters
          (formal_parameter
            type: (type_identifier
              (identifier))
            name: (identifier)))
        body: (block
          (explicit_constructor_invocation
            object: (identifier)
            (super)
            arguments: (argument_list)))))))

====================================
System.runAs statement
====================================

public class TestClass {
    public void testRunAs() {
        System.runAs(testUser) {
            Account acc = new Account();
            insert as user acc;
        }
    }
}

---

(source_file
  (class_declaration
    (modifiers
      (modifier))
    name: (identifier)
    body: (class_body
      (method_declaration
        (modifiers
          (modifier))
        type: (void_type)
        name: (identifier)
        parameters: (formal_parameters)
        body: (block
          (run_as_statement
            user: (parenthesized_expression
              (identifier))
            body: (block
              (local_variable_declaration
                type: (type_identifier
                  (identifier))
                (variable_declarator
                  name: (identifier)
                  value: (new_expression
                    type: (type_identifier
                      (identifier))
                    arguments: (argument_list))))
              (dml_statement
                (dml_type)
                access_level: (dml_security_mode)
                record: (identifier)))))))))

====================================
DML statements with security modes
====================================

public class T {
    public void doWork() {
        insert as user a;
        update as system records;
        upsert as user opps External_Id__c;
        delete as user a;
        undelete as system a;
        merge as user a b;
    }
}

---

(source_file
  (class_declaration
    (modifiers
      (modifier))
    name: (identifier)
    body: (class_body
      (method_declaration
        (modifiers
          (modifier))
        type: (void_type)
        name: (identifier)
        parameters: (formal_parameters)
        body: (block
          (dml_statement
            (dml_type)
            access_level: (dml_security_mode)
            record: (identifier))
          (dml_statement
            (dml_type)
            access_level: (dml_security_mode)
            record: (identifier))
          (dml_statement
            (dml_type)
            access_level: (dml_security_mode)
            record: (identifier)
            options: (identifier))
          (dml_statement
            (dml_type)
            access_level: (dml_security_mode)
            record: (identifier))
          (dml_statement
            (dml_type)
            access_level: (dml_security_mode)
            record: (identifier))
          (dml_statement
            (dml_type)
            access_level: (dml_security_mode)
            record: (identifier)
            options: (identifier)))))))


